--- a/hello-world/test/styles.css
+++ b/hello-world/test/styles.css
@@ -1,6 +1,6 @@
 .titlething {
     color:lightskyblue;
     border: 1px solid black;
-    padding-left: 1cm;
+    padding-left: 7mm;
     font-family: Verdana;
 }
